[gd_scene load_steps=9 format=3 uid="uid://5iau6avccrkn"]

[ext_resource type="Script" path="res://Scenes/Enemies/Level 1 Boss/PathFollow2D.gd" id="1_7j0ar"]
[ext_resource type="Script" path="res://Scenes/Enemies/Level 1 Boss/boss_1_path.gd" id="1_84h3o"]
[ext_resource type="Script" path="res://Scenes/Enemies/Level 1 Boss/1PathFollow2D.gd" id="3_73t0o"]
[ext_resource type="Script" path="res://Scenes/Enemies/Level 1 Boss/2PathFollow2D.gd" id="4_omd07"]
[ext_resource type="PackedScene" uid="uid://uy20g2lse8du" path="res://Scenes/Enemies/Level 1 Boss/boss_1.tscn" id="5_02jt8"]

[sub_resource type="Curve2D" id="Curve2D_n6s2g"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -115, 0, 0, 0, 0, 0, 100)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_iafgo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 230, 100, 0, 0, 0, 0, -230, 100, 0, 0, 0, 0, 230, 100)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_uococ"]
_data = {
"points": PackedVector2Array(-98.5358, 101.611, 0, 0, -230, 175, -150, 0, 150, 0, 0, 100, 0, 0, 0, 0, 230, 175, 150, 0, -150, 0, 0, 100, 0, 0, 0, 0, -230, 175)
}
point_count = 5

[node name="Boss1Path" type="Node2D"]
script = ExtResource("1_84h3o")

[node name="Entry Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_n6s2g")

[node name="EntryPathFollow2D" type="PathFollow2D" parent="Entry Path"]
position = Vector2(0, -115)
rotates = false
loop = false
script = ExtResource("1_7j0ar")

[node name="Boss1" parent="Entry Path/EntryPathFollow2D" instance=ExtResource("5_02jt8")]

[node name="Pattern 1" type="Path2D" parent="."]
curve = SubResource("Curve2D_iafgo")

[node name="1PathFollow2D" type="PathFollow2D" parent="Pattern 1"]
position = Vector2(3.05196e-05, 100)
progress = 230.0
rotates = false
script = ExtResource("3_73t0o")

[node name="Pattern 2" type="Path2D" parent="."]
curve = SubResource("Curve2D_uococ")

[node name="2PathFollow2D" type="PathFollow2D" parent="Pattern 2"]
position = Vector2(5.43013, 100.033)
progress = 252.12
rotates = false
script = ExtResource("4_omd07")

[node name="GameCompleteTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="GameCompleteTimer" to="." method="_on_game_complete_timer_timeout"]
